@@ -132,7 +132,8 @@ vit_penalty_count_lv: 3
 // Change attacker's direction to face opponent on every attack? (Note 4)
 attack_direction_change: 15
 
-// Remove elemental modifiers from normal attacks (skills will always have elemental modifiers)? (Note 4)
+// For those who is set, attacks of Neutral element will not get any elemental
+// modifiers (they will hit for full damage on Ghost types) (Note 4)
 attack_attr_none: 14
 
 // Rate at which equipment can break (base rate before it's modified by any skills)
